Add stack questions

--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -598,6 +598,240 @@
     "\n",
     "        return water_trapped\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Valid Parenthesis\n",
+    "[leetcode link](https://leetcode.com/problems/valid-parentheses/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        stack = []\n",
+    "\n",
+    "        for i in range(len(s)):\n",
+    "            if len(stack) == 0:\n",
+    "                stack.append(s[i])\n",
+    "                continue\n",
+    "\n",
+    "            if self.__is_open(s[i]):\n",
+    "                stack.append(s[i])\n",
+    "            \n",
+    "            else:\n",
+    "                if self.__same_closed(stack[-1], s[i]):\n",
+    "                    stack.pop()\n",
+    "                \n",
+    "                # return false when different bracket is closed, early termination possibility\n",
+    "                else:\n",
+    "                    return False\n",
+    "        \n",
+    "        return len(stack) == 0\n",
+    "    \n",
+    "    def __is_open(self, c):\n",
+    "        return c == '(' or c == '{' or c == '['\n",
+    "\n",
+    "    def __same_closed(self, prev: str, cur: str) -> bool:\n",
+    "        return  (prev == '(' and cur == ')') or \\\n",
+    "                (prev == '{' and cur == '}') or \\\n",
+    "                (prev == '[' and cur == ']')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Min Stack\n",
+    "[leetcode link](https://leetcode.com/problems/min-stack/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MinStack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.s = []\n",
+    "        self.__min_till_now = []\n",
+    "\n",
+    "    def push(self, val: int) -> None:\n",
+    "        self.s.append(val)\n",
+    "\n",
+    "        if len(self.__min_till_now) == 0:\n",
+    "            self.__min_till_now.append(val)\n",
+    "        else:\n",
+    "            self.__min_till_now.append(min(val, self.__min_till_now[-1]))\n",
+    "\n",
+    "    def pop(self) -> None:\n",
+    "        self.s.pop()\n",
+    "        self.__min_till_now.pop()\n",
+    "\n",
+    "    def top(self) -> int:\n",
+    "        return self.s[-1]\n",
+    "\n",
+    "    def getMin(self) -> int:\n",
+    "        return self.__min_till_now[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate Reverse Polish Notation\n",
+    "[leetcode link](https://leetcode.com/problems/evaluate-reverse-polish-notation/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def evalRPN(self, tokens: list[str]) -> int:\n",
+    "        stk = []\n",
+    "\n",
+    "        for s in tokens:            \n",
+    "            if self.__isoperator(s):\n",
+    "                a, b = stk[-2], stk[-1]\n",
+    "                stk.pop()\n",
+    "                stk.pop()\n",
+    "                res = self.__operate(a, b, s)\n",
+    "                stk.append(res)\n",
+    "            else:\n",
+    "                stk.append(int(s))\n",
+    "\n",
+    "        return stk[0]\n",
+    "                \n",
+    "    def __isoperator(self, s: str):\n",
+    "        return s in [\"+\", \"-\", \"/\", \"*\"]\n",
+    "    \n",
+    "    def __operate(self, a: int, b: int, operator: str) -> int:\n",
+    "        if operator == \"+\":\n",
+    "            return a + b\n",
+    "        elif operator == \"-\":\n",
+    "            return a - b\n",
+    "        elif operator == \"*\":\n",
+    "            return a * b\n",
+    "        else:\n",
+    "            return int(a / b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate Parentheses\n",
+    "[leetcode link](https://leetcode.com/problems/generate-parentheses/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def generateParenthesis(self, n: int) -> list[str]:\n",
+    "        combo = []\n",
+    "        res = []\n",
+    "\n",
+    "        def backtrack(remaining_open: int, remaining_closed: int) -> None:\n",
+    "            if remaining_open == remaining_closed == 0:\n",
+    "                res.append(\"\".join(combo))\n",
+    "                # The follwing will clear all the outputs, even for the interim results. \n",
+    "                # Thus we need to pop from stack after each backtrack as below.\n",
+    "                # combo.clear() \n",
+    "                return\n",
+    "            \n",
+    "            if remaining_open > 0:\n",
+    "                combo.append(\"(\")\n",
+    "                backtrack(remaining_open-1, remaining_closed)\n",
+    "                combo.pop()\n",
+    "            \n",
+    "            if remaining_closed > remaining_open:\n",
+    "                combo.append(\")\")\n",
+    "                backtrack(remaining_open, remaining_closed-1)\n",
+    "                combo.pop()\n",
+    "\n",
+    "        backtrack(n, n)\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Daily Temperartures\n",
+    "[leetcode link](https://leetcode.com/problems/daily-temperatures/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def dailyTemperatures(self, temperatures: list[int]) -> list[int]:\n",
+    "        stack: list[tuple] = []\n",
+    "        res = [0] * len(temperatures)\n",
+    "        \n",
+    "        for i, temp in enumerate(temperatures):\n",
+    "            while (len(stack) > 0 and temp > stack[-1][0]):\n",
+    "                _, old_i = stack.pop()\n",
+    "                res[old_i] = (i - old_i)\n",
+    "            \n",
+    "            stack.append((temp, i))\n",
+    "\n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Car Fleet\n",
+    "[leetcode link](https://leetcode.com/problems/car-fleet/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def carFleet(self, target: int, position: list[int], speed: list[int]) -> int:\n",
+    "        n_fleets = 0\n",
+    "        pair = [(p, s) for p,s in zip(position, speed)]\n",
+    "\n",
+    "        max_ttd = 0\n",
+    "        for p,s in sorted(pair, key = lambda x: x[0], reverse = True): # sort based on position O(nlogn)\n",
+    "            ttd = (target - p) / s\n",
+    "            if ttd > max_ttd:\n",
+    "                n_fleets += 1\n",
+    "                max_ttd = ttd\n",
+    "        \n",
+    "        return n_fleets"
+   ]
   }
  ],
  "metadata": {
