--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -23,7 +23,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import math"
    ]
   },
   {
@@ -831,6 +832,253 @@
     "                max_ttd = ttd\n",
     "        \n",
     "        return n_fleets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Binary Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Search\n",
+    "[leetcode link](https://leetcode.com/problems/binary-search/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: list[int], target: int) -> int:\n",
+    "        l, r = 0, len(nums) - 1\n",
+    "\n",
+    "        while l <= r: # = is important here, otherwise elements at the end will be missed\n",
+    "            mid = int((l + r) / 2)\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "            \n",
+    "            elif nums[mid] < target:\n",
+    "                l = mid + 1\n",
+    "            \n",
+    "            else:\n",
+    "                r = mid - 1\n",
+    "        \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search a 2D Matrix\n",
+    "[leetcode link](https://leetcode.com/problems/search-a-2d-matrix/description/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def searchMatrix(self, matrix: list[list[int]], target: int) -> bool:\n",
+    "        rows, cols = len(matrix), len(matrix[0])\n",
+    "        n = rows * cols\n",
+    "\n",
+    "        l, r = 0, n - 1\n",
+    "        while l <= r:\n",
+    "            mid = int((l + r) / 2)\n",
+    "            i, j = mid // cols, mid % cols # convert 1D index to 2D index\n",
+    "            \n",
+    "            if matrix[i][j] > target:\n",
+    "                r = mid - 1\n",
+    "            \n",
+    "            elif matrix[i][j] < target:\n",
+    "                l = mid + 1\n",
+    "            \n",
+    "            else:\n",
+    "                return True\n",
+    "\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Koko Eating Bananas\n",
+    "[Leetcode link](https://leetcode.com/problems/koko-eating-bananas/description/), [Youtube solution](https://youtu.be/U2SozAs9RzA)\n",
+    "\n",
+    "Binary search on `k =  [1, ..., max(piles)]`, return the min value of `k` where `hours taken <= h` (< is important, since we can achieve the target in less than `h` hours)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def minEatingSpeed(self, piles: list[int], h: int) -> int:\n",
+    "        l, r = 1, max(piles)\n",
+    "        validK = 0\n",
+    "\n",
+    "        while l <= r:\n",
+    "            mid = int((l + r) / 2)\n",
+    "            hoursToEat = self.__hoursToEat(piles, mid)\n",
+    "\n",
+    "            if hoursToEat > h:\n",
+    "                l = mid + 1\n",
+    "            elif hoursToEat <= h:\n",
+    "                r = mid - 1\n",
+    "                validK = mid\n",
+    "\n",
+    "        return validK\n",
+    "\n",
+    "    \n",
+    "    def __hoursToEat(self, piles: list[int], k: int) -> int:\n",
+    "        hours = 0\n",
+    "        \n",
+    "        for pile in piles:\n",
+    "            hours += math.ceil(pile / k)\n",
+    "        return hours"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find Minimum in Rotated Sorted Array\n",
+    "[Leetcode link](https://leetcode.com/problems/find-minimum-in-rotated-sorted-array/description/), [Youtube solution](https://youtu.be/nIVW4P8b1VA)\n",
+    "\n",
+    "Check which half of array is sorted in order to find pivot, then apply binary search on the other half."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findMin(self, nums: list[int]) -> int:\n",
+    "        l, r = 0, len(nums) - 1\n",
+    "        minVal = nums[0]\n",
+    "\n",
+    "        while l <= r:\n",
+    "            if nums[l] < nums[r]:   # ascending sub-array found \n",
+    "                return min(minVal, nums[l])\n",
+    "            \n",
+    "            mid = (l + r) // 2\n",
+    "            minVal = min(minVal, nums[mid])\n",
+    "\n",
+    "            if nums[mid] < nums[r]: # right half is ascending, so value less than nums[mid] could be in left half\n",
+    "                r = mid - 1\n",
+    "            else:                   # left half is ascending, so value less than nums[l] could be in right half\n",
+    "                l = mid + 1\n",
+    "        \n",
+    "        return minVal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Search in Rotated Sorted Array\n",
+    "[Leetcode link](https://leetcode.com/problems/search-in-rotated-sorted-array/description/), [Youtube solution](https://youtu.be/U8XENwh8Oy8)\n",
+    "\n",
+    "Mid will be apart of left sorted or right sorted, if target is in range of sorted portion then search it, otherwise search the other half."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def search(self, nums: list[int], target: int) -> int:\n",
+    "        l, r = 0, len(nums) - 1\n",
+    "\n",
+    "        while l <= r:\n",
+    "            mid = (l + r) // 2\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "\n",
+    "            if nums[mid] < nums[r]:     # right half is sorted\n",
+    "                if nums[mid] < target <= nums[r]:   # target is in right half\n",
+    "                    l = mid + 1\n",
+    "                else:                               # target is in left half\n",
+    "                    r = mid - 1                \n",
+    "            else:                       # left half is sorted\n",
+    "                if nums[l] <= target < nums[mid]:   # target is in left half\n",
+    "                    r = mid - 1\n",
+    "                else:                               # target is in right half\n",
+    "                    l = mid + 1\n",
+    "        \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Time Based Key-Value Store\n",
+    "[Leetcode link](https://leetcode.com/problems/time-based-key-value-store/description/), [Youtube solution](https://youtu.be/fu2cD_6E8Hw)\n",
+    "\n",
+    "Hashmap of `(key, [[val1, timestamp1],[val2, timestamp2], ...])`. Since timestamps are in increasing order, binary search on the timestamps to return the appropriate val. If exact match of timestamp is not found, then return high pointer result after while loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TimeMap:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.__map = defaultdict(list)\n",
+    "\n",
+    "    def set(self, key: str, value: str, timestamp: int) -> None:\n",
+    "        self.__map[key].append((timestamp, value))\n",
+    "\n",
+    "    def get(self, key: str, timestamp: int) -> str:\n",
+    "        __data = self.__map[key]\n",
+    "        data_not_present = len(__data) == 0 or timestamp < __data[0][0]\n",
+    "\n",
+    "        return self.__binary_search(__data, timestamp)\n",
+    "\n",
+    "    def __binary_search(self, data: list[tuple[int, str]], timestamp: int) -> str:\n",
+    "        l, r = 0, len(data) - 1\n",
+    "        res = \"\"\n",
+    "        \n",
+    "        while l <= r:\n",
+    "            mid = (l + r) // 2\n",
+    "            mid_timestamp, mid_value = data[mid]\n",
+    "\n",
+    "            if timestamp > mid_timestamp:\n",
+    "                res = mid_value\n",
+    "                l = mid + 1\n",
+    "            elif timestamp < mid_timestamp:\n",
+    "                r = mid - 1\n",
+    "            else:\n",
+    "                res = mid_value\n",
+    "                break\n",
+    "        \n",
+    "        return res   \n",
+    "\n",
+    "# Your TimeMap object will be instantiated and called as such:\n",
+    "# obj = TimeMap()\n",
+    "# obj.set(key,value,timestamp)\n",
+    "# param_2 = obj.get(key,timestamp)"
    ]
   }
  ],
