Finish sliding window

--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -1080,6 +1080,157 @@
     "# obj.set(key,value,timestamp)\n",
     "# param_2 = obj.get(key,timestamp)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sliding Window"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best Time to Buy and Sell Stock\n",
+    "[Leetcode link](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/description/), [Youtube solution](https://youtu.be/1pkOgXD63yU)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxProfit(self, prices: list[int]) -> int:\n",
+    "        lowest_price = prices[0]\n",
+    "        max_profit = 0\n",
+    "\n",
+    "        for price in prices:\n",
+    "            max_profit = max(max_profit, price - lowest_price)\n",
+    "            lowest_price = min(lowest_price, price)\n",
+    "        \n",
+    "        return max_profit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Longest Substring Without Repeating Characters\n",
+    "[Leetcode link](https://leetcode.com/problems/longest-substring-without-repeating-characters/description/), [Youtube solution](https://youtu.be/wiGpQwVHdE0)\n",
+    "\n",
+    "Keep progressing the window with two sliding pointers. If a duplicate is found to the right, then shrink the window from the left."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lengthOfLongestSubstring(self, s: str) -> int:\n",
+    "        l, r = 0, 0\n",
+    "        maxlen_substring = 0\n",
+    "        chars_in_substring = set()\n",
+    "\n",
+    "        while l <= r and r < len(s):\n",
+    "            # shrink the window from the left side until right character is unique\n",
+    "            while (s[r] in chars_in_substring):\n",
+    "                chars_in_substring.remove(s[l])\n",
+    "                l += 1\n",
+    "\n",
+    "            chars_in_substring.add(s[r])\n",
+    "            maxlen_substring = max(maxlen_substring, r-l+1)\n",
+    "            r += 1       \n",
+    "\n",
+    "        return maxlen_substring"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Longest Repeating Character Replacement\n",
+    "[Leetcode link](https://leetcode.com/problems/longest-repeating-character-replacement/description/), [Youtube solution](https://youtu.be/gqXU1UyA8pk)\n",
+    "\n",
+    "Decrement left pointer until substring is valid. Maintain a freequency array of 26 characters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def characterReplacement(self, s: str, k: int) -> int:\n",
+    "        l, r = 0, 0\n",
+    "        freq = [0] * 26\n",
+    "        max_len = 0\n",
+    "\n",
+    "        # O(n)\n",
+    "        while l <= r and r < len(s):            \n",
+    "            freq[ord(s[r]) - ord('A')] += 1            \n",
+    "            \n",
+    "            # O(26): Decrement left pointer until substring is valid\n",
+    "            while (r - l + 1) - max(freq) > k:\n",
+    "                freq[ord(s[l]) - ord('A')] -= 1\n",
+    "                l += 1\n",
+    "            \n",
+    "            max_len = max(max_len, r - l + 1)\n",
+    "            r += 1\n",
+    "        \n",
+    "        return max_len"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Permutation in String\n",
+    "[Leetcode link](https://leetcode.com/problems/permutation-in-string/description/), [Youtube solution](https://youtu.be/UbyhOgBN834)\n",
+    "\n",
+    "Match strings based on their frequency encodings, and update encodings if match not found."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def checkInclusion(self, s1: str, s2: str) -> bool:\n",
+    "        if len(s1) > len(s2):\n",
+    "            return False\n",
+    "        \n",
+    "        encoded_s1 = self.__encode(s1)\n",
+    "        encoded_s2 = self.__encode(s2[:len(s1)])\n",
+    "\n",
+    "        for l in range(len(s2) - len(s1) + 1):    \n",
+    "            # Match strings based on their frequency encodings\n",
+    "            if encoded_s1 == encoded_s2:\n",
+    "                return True         \n",
+    "            \n",
+    "            # Update encodings if match not found\n",
+    "            r = l + len(s1) - 1\n",
+    "            if r < len(s2) - 1:\n",
+    "                encoded_s2[ord(s2[r + 1]) - ord('a')] += 1\n",
+    "                encoded_s2[ord(s2[l]) - ord('a')] -= 1\n",
+    "\n",
+    "        return False\n",
+    "        \n",
+    "    def __encode(self, s: str) -> list[int]:\n",
+    "        arr = [0] * 26\n",
+    "\n",
+    "        for c in s:\n",
+    "            arr[ord(c) - ord('a')] += 1\n",
+    "        \n",
+    "        return arr"
+   ]
   }
  ],
  "metadata": {
