Finished Linked List

--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -1231,6 +1231,485 @@
     "        \n",
     "        return arr"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linked Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "class ListNode:\n",
+    "    def __init__(self, val=0, next=None):\n",
+    "        self.val = val\n",
+    "        self.next = next\n",
+    "from typing import Optional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse Linked List\n",
+    "[leetcode link](https://leetcode.com/problems/reverse-linked-list/description/), [Youtube solution](https://youtu.be/G0_I-ZF0S38)\n",
+    "\n",
+    "Create a `prev` node and then keep swapping until the tail is reached."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        prev, cur = None, head\n",
+    "        \n",
+    "        while cur is not None:\n",
+    "            temp = cur.next\n",
+    "            cur.next = prev\n",
+    "\n",
+    "            # Swap\n",
+    "            prev = cur\n",
+    "            cur = temp\n",
+    "        \n",
+    "        return prev"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge Two Sorted Lists\n",
+    "[leetcode link](https://leetcode.com/problems/merge-two-sorted-lists/description/), [Youtube solution](https://youtu.be/XIdigk956u0)\n",
+    "\n",
+    "Traverse one list at a time, until we encounter a value that is larger than the other list's smallest item. Then rewire the pointers. Repeat for the other list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def mergeTwoLists(self, list1: Optional[ListNode], list2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        if list1 is None:\n",
+    "            return list2\n",
+    "        if list2 is None:\n",
+    "            return list1\n",
+    "        \n",
+    "        head = list1 if (list1.val <= list2.val) else list2\n",
+    "        cur1, prev1 = list1, None\n",
+    "        cur2, prev2 = list2, None\n",
+    "        \n",
+    "        while (cur1 is not None and cur2 is not None):\n",
+    "\n",
+    "            if (cur1.val <= cur2.val):\n",
+    "                while (cur1 is not None) and (cur1.val <= cur2.val):\n",
+    "                    prev1 = cur1\n",
+    "                    cur1 = cur1.next\n",
+    "                prev1.next = cur2\n",
+    "            else:\n",
+    "                while (cur2 is not None) and (cur2.val < cur1.val):\n",
+    "                    prev2 = cur2\n",
+    "                    cur2 = cur2.next\n",
+    "                prev2.next = cur1\n",
+    "        \n",
+    "        return head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reorder List\n",
+    "[leetcode link](https://leetcode.com/problems/reorder-list/description/), [Youtube solution](https://youtu.be/S5bfdUTrKLM)\n",
+    "\n",
+    "Create reversed list from tail to the middle, and then rewire the pointers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reorderList(self, head: Optional[ListNode]) -> None:\n",
+    "        \"\"\"\n",
+    "        Do not return anything, modify head in-place instead.\n",
+    "        \"\"\"\n",
+    "        cur1 = head\n",
+    "        cur2 = self.__reverseList(self.__getMidNode(head))\n",
+    "        \n",
+    "        while cur1 != cur2:\n",
+    "            if cur1.next:\n",
+    "                temp = cur1.next\n",
+    "                cur1.next = cur2\n",
+    "                cur1 = temp\n",
+    "\n",
+    "            if cur2.next:\n",
+    "                temp = cur2.next\n",
+    "                cur2.next = cur1\n",
+    "                cur2 = temp\n",
+    "\n",
+    "    \n",
+    "    def __reverseList(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        prev, cur = None, head\n",
+    "        \n",
+    "        while cur is not None:\n",
+    "            temp = cur.next\n",
+    "            cur.next = prev\n",
+    "\n",
+    "            # Swap\n",
+    "            prev = cur\n",
+    "            cur = temp\n",
+    "        \n",
+    "        return prev\n",
+    "    \n",
+    "    def __getMidNode(self, head: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        mid, tail = head, head\n",
+    "        while tail and tail.next:\n",
+    "           mid = mid.next\n",
+    "           tail = tail.next.next \n",
+    "        \n",
+    "        return mid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Remove Nth Node From End of List\n",
+    "[leetcode link](https://leetcode.com/problems/remove-nth-node-from-end-of-list/description/), [Youtube solution](https://youtu.be/XVuQxVej6y8)\n",
+    "\n",
+    "Create a dummy node at the beginning of the list. Start traversing from the head after a delay of `n` nodes. Rewire the pointers and return `dummy.next` since the original `head` might have been removed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def removeNthFromEnd(self, head: Optional[ListNode], n: int) -> Optional[ListNode]:\n",
+    "        dummy = ListNode(-1, head)\n",
+    "        delay, cur = dummy, head\n",
+    "        \n",
+    "        # Move `cur` ahead by n times\n",
+    "        for _ in range(n):\n",
+    "            cur = cur.next\n",
+    "\n",
+    "        while cur:\n",
+    "            cur = cur.next\n",
+    "            delay = delay.next\n",
+    "\n",
+    "        delay.next = delay.next.next\n",
+    "\n",
+    "        return dummy.next"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Copy List with Random Pointer\n",
+    "[leetcode link](https://leetcode.com/problems/copy-list-with-random-pointer/description/), [Youtube solution](https://youtu.be/5Y2EiZST97Y)\n",
+    "\n",
+    "Can be done by maintianing a dictionary of Node mappings. Another way is to create an interweaved list and then rewire the pointers (No extra space required this way)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, x: int, next: Optional['Node'] = None, random: Optional['Node'] = None):\n",
+    "        self.val = int(x)\n",
+    "        self.next = next\n",
+    "        self.random = random\n",
+    "\n",
+    "class Solution:\n",
+    "    def copyRandomList(self, head: 'Optional[Node]') -> 'Optional[Node]':\n",
+    "        return self.__using_hashmap(head)\n",
+    "        # return self.__using_interweaving(head)\n",
+    "    \n",
+    "    def __using_hashmap(self, head: 'Optional[Node]') -> 'Optional[Node]':\n",
+    "        old_to_new = {None: None}\n",
+    "\n",
+    "        cur = head\n",
+    "        while cur:\n",
+    "            old_to_new[cur] = Node(cur.val)\n",
+    "            cur = cur.next\n",
+    "\n",
+    "        cur = head\n",
+    "        while cur:\n",
+    "            old_to_new[cur].next = old_to_new[cur.next]\n",
+    "            old_to_new[cur].random = old_to_new[cur.random]\n",
+    "            cur = cur.next\n",
+    "        \n",
+    "        return old_to_new[head]\n",
+    "    \n",
+    "    def __using_interweaving(self, head: 'Optional[Node]') -> 'Optional[Node]':\n",
+    "        if not head:\n",
+    "            return head\n",
+    "        \n",
+    "        # Create duplicate list and interweave with original list\n",
+    "        cur = head\n",
+    "        while cur:\n",
+    "            temp = cur.next\n",
+    "            cur.next = Node(cur.val)\n",
+    "            cur.next.next = temp\n",
+    "            cur = temp\n",
+    "        \n",
+    "        # Link the random pointers\n",
+    "        cur = head\n",
+    "        while cur:\n",
+    "            cur.next.random = cur.random.next if cur.random else None\n",
+    "            cur = cur.next.next\n",
+    "        \n",
+    "        # De-weave both lists\n",
+    "        cur = head\n",
+    "        new_head = head.next\n",
+    "        while cur and cur.next:\n",
+    "            temp = cur.next\n",
+    "            cur.next = cur.next.next\n",
+    "            cur = temp\n",
+    "\n",
+    "        return new_head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add Two Numbers\n",
+    "[leetcode link](https://leetcode.com/problems/add-two-numbers/description/), [Youtube solution](https://youtu.be/wgFPrzTjm7s)\n",
+    "\n",
+    "Create a dummy node and keep adding the two numbers. Remember to add a carry at the end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, val=0, next=None):\n",
+    "#         self.val = val\n",
+    "#         self.next = next\n",
+    "class Solution:\n",
+    "    def addTwoNumbers(self, l1: Optional[ListNode], l2: Optional[ListNode]) -> Optional[ListNode]:\n",
+    "        dummy = cur = ListNode()\n",
+    "        \n",
+    "        _carry = 0\n",
+    "        while l1 or l2:        \n",
+    "            # Get the actual sum of digits\n",
+    "            _sum = _carry\n",
+    "            if l1:\n",
+    "                _sum += l1.val\n",
+    "                l1 = l1.next\n",
+    "            if l2:\n",
+    "                _sum += l2.val\n",
+    "                l2 = l2.next\n",
+    "\n",
+    "            # Get the carry/sum values\n",
+    "            _carry = _sum // 10\n",
+    "            _sum %= 10\n",
+    "\n",
+    "            # Create the new node\n",
+    "            cur.next = ListNode(_sum)\n",
+    "            cur = cur.next\n",
+    "\n",
+    "        # Add a new digit if a non-zero carry value is left at the end\n",
+    "        if _carry > 0:\n",
+    "            cur.next = ListNode(_carry)\n",
+    "        \n",
+    "        return dummy.next\n",
+    "                    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linked List Cycle\n",
+    "[leetcode link](https://leetcode.com/problems/linked-list-cycle/description/), [Youtube solution]([https](https://youtu.be/gBTe7lFR3vc))\n",
+    "\n",
+    "1. Can keep a `set()` of `Node` pointers and check if the current node is already in the set. Will require O(n) space.\n",
+    "2. Use slow and fast pointers. Will require O(1) space. Proof can be found in the YouTube video. Basically in a loop, the distance b/w the two pointers will be reducing by 1 node (dist b/w nodes + 1 (slow pointer movement) - 2 (fast pointer movement)) node at each iteration, thus they are guaranteed to meet at the same point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def hasCycle(self, head: Optional[ListNode]) -> bool:\n",
+    "        if not head or not head.next:\n",
+    "            return False\n",
+    "\n",
+    "        slow, fast = head, head\n",
+    "\n",
+    "        while slow and fast and fast.next:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "\n",
+    "            if slow == fast:\n",
+    "                return True\n",
+    "        \n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find the Duplicate Number\n",
+    "[leetcode link](https://leetcode.com/problems/find-the-duplicate-number/description/), [Youtube solution]()\n",
+    "\n",
+    "1. Create a set and add numbers to it, if the number is already in the set, it is the duplicate number. `O(n)` time and `O(n)` space.\n",
+    "2. Slow and fast pointers using array indices. See logic to find point of intersection in youtube video. `O(n)` time and `O(1)` space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def findDuplicate(self, nums: list[int]) -> int:\n",
+    "        return self.__using_set(nums)\n",
+    "        # return self.__fast_and_slow_pointer(nums)\n",
+    "\n",
+    "    def __using_set(self, nums: list[int]) -> int:\n",
+    "        seen = set()\n",
+    "\n",
+    "        for num in nums:\n",
+    "            if num in seen:\n",
+    "                return num\n",
+    "            seen.add(num)\n",
+    "        \n",
+    "        return -1\n",
+    "    \n",
+    "    def __fast_and_slow_pointer(self, nums: list[int]) -> int:\n",
+    "        slow, fast = nums[0], nums[0]\n",
+    "\n",
+    "        while True:\n",
+    "            slow = nums[slow]\n",
+    "            fast = nums[nums[fast]]\n",
+    "\n",
+    "            if slow == fast:\n",
+    "                break\n",
+    "        \n",
+    "        # Start new slow pointer from head and,\n",
+    "        # point of intersection is the duplicate value\n",
+    "        slow_new = nums[0]\n",
+    "        while slow != slow_new:\n",
+    "            slow = nums[slow]\n",
+    "            slow_new = nums[slow_new]\n",
+    "\n",
+    "        return slow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LRU Cache\n",
+    "[leetcode link](https://leetcode.com/problems/lru-cache/description/), [Youtube solution](https://youtu.be/7ABFKPK2hD4)\n",
+    "\n",
+    "1. Create a doubly linked list and a hashmap. `O(1)` time and `O(n)` space.\n",
+    "2. DLL keeps track of the oldest and newest nodes.\n",
+    "3. Hashmap allows for constant lookups."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, key: int, val: int):\n",
+    "        self.key, self.val = key, val\n",
+    "        self.prev = self.next = None\n",
+    "\n",
+    "\n",
+    "class LRUCache:\n",
+    "    def __init__(self, capacity: int):\n",
+    "        self.head = Node(-1, -1)\n",
+    "        self.tail = Node(-1, -1)\n",
+    "        self.head.next = self.tail\n",
+    "        self.tail.prev = self.head\n",
+    "        \n",
+    "        self.capacity = capacity\n",
+    "        self.cache: dict[int, Node] = {}\n",
+    "\n",
+    "    def get(self, key: int) -> int:\n",
+    "        if self.__is_new_key(key):\n",
+    "            return -1\n",
+    "\n",
+    "        # No need to edit hashmap since the same node is removed and added at the end\n",
+    "        node = self.cache[key]\n",
+    "        self.__remove(node)\n",
+    "        self.__insert_at_end(node)\n",
+    "\n",
+    "        return node.val\n",
+    "\n",
+    "    def put(self, key: int, value: int) -> None:\n",
+    "        if self.__is_new_key(key):\n",
+    "            node = Node(key, value)\n",
+    "            self.__insert_at_end(node)\n",
+    "            self.cache[key] = node\n",
+    "        else:\n",
+    "            node = self.cache[key]\n",
+    "            node.val = value\n",
+    "            self.__remove(node)\n",
+    "            self.__insert_at_end(node)\n",
+    "\n",
+    "        if not self.__is_within_capacity():\n",
+    "            key_to_del = self.head.next.key\n",
+    "            self.__remove(self.head.next)\n",
+    "            del self.cache[key_to_del]\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def __is_new_key(self, key: int) -> bool:\n",
+    "        return key not in self.cache.keys()\n",
+    "\n",
+    "    def __is_within_capacity(self) -> bool:\n",
+    "        return len(self.cache) <= self.capacity\n",
+    "\n",
+    "    def __insert_at_end(self, node: Node) -> None:\n",
+    "        node.prev, node.next = self.tail.prev, self.tail\n",
+    "        node.prev.next = node.next.prev = node\n",
+    "    \n",
+    "    def __remove(self, node: Node) -> None:\n",
+    "        assert node is not None and node is not self.tail and node is not self.head, \"Removing node from empty cache.\"\n",
+    "\n",
+    "        node.prev.next = node.next\n",
+    "        node.next.prev = node.prev\n",
+    "        \n",
+    "        node.prev = node.next = None"
+   ]
   }
  ],
  "metadata": {
