--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
+    "from collections import defaultdict, deque\n",
     "import math"
    ]
   },
@@ -1709,6 +1709,519 @@
     "        node.next.prev = node.prev\n",
     "        \n",
     "        node.prev = node.next = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for a binary tree node.\n",
+    "class TreeNode:\n",
+    "    def __init__(self, val=0, left=None, right=None):\n",
+    "        self.val = val\n",
+    "        self.left = left\n",
+    "        self.right = right"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Invert Binary Tree\n",
+    "[leetcode link](https://leetcode.com/problems/invert-binary-tree/description/), [Youtube solution](https://youtu.be/OnSn2XEQ4MY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def invertTree(self, root: Optional[TreeNode]) -> Optional[TreeNode]:\n",
+    "        if not root:\n",
+    "            return root\n",
+    "        \n",
+    "        temp = self.invertTree(root.right)\n",
+    "        root.right = self.invertTree(root.left)\n",
+    "        root.left = temp\n",
+    "\n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Maximum Depth of Binary Tree\n",
+    "[leetcode link](https://leetcode.com/problems/maximum-depth-of-binary-tree/description/), [Youtube solution](https://youtu.be/hTM3phVI6YQ)\n",
+    "\n",
+    "1. Recursive DFS (this solution)\n",
+    "2. Iterative BFS (using queue)\n",
+    "3. Iterative DFS (using stack)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        return 1 + max(self.maxDepth(root.left), self.maxDepth(root.right))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Diameter of Binary Tree\n",
+    "[leetcode link](https://leetcode.com/problems/diameter-of-binary-tree/description/), [Youtube solution](https://youtu.be/bkxqA8Rfv04)\n",
+    "1. `O(n^2)` time solution since height is being called for entire subtree at every node.\n",
+    "2. `O(n)` time solution that stores the height of each node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# O(n^2) solution, height is being called for the entire tree for each node\n",
+    "class Solution:\n",
+    "    def diameterOfBinaryTree(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        return max(\n",
+    "            self.diameterOfBinaryTree(root.left), \n",
+    "            self.diameterOfBinaryTree(root.right), \n",
+    "            self.__maxDepth(root.left) + self.__maxDepth(root.right)\n",
+    "        )\n",
+    "    \n",
+    "    def __maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        return 1 + max(self.__maxDepth(root.left), self.__maxDepth(root.right))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# O(n) solution, height is being once for each node, and the diameter is hence updated\n",
+    "class Solution:\n",
+    "    def diameterOfBinaryTree(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        self.res = 0\n",
+    "        self.__maxDepth(root)\n",
+    "        \n",
+    "        return self.res\n",
+    "    \n",
+    "    def __maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        lh = self.__maxDepth(root.left)\n",
+    "        rh = self.__maxDepth(root.right)\n",
+    "        self.res = max(self.res, lh + rh)\n",
+    "        \n",
+    "        return 1 + max(lh, rh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Balanced Binary Tree\n",
+    "[leetcode link](https://leetcode.com/problems/balanced-binary-tree/description/), [Youtube solution](https://youtu.be/QfJsau0ItOY)\n",
+    "\n",
+    "Similar to [Diameter of Binary Tree](#diameter-of-binary-tree), we need to update the result in the height function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isBalanced(self, root: Optional[TreeNode]) -> bool:\n",
+    "        if not root:\n",
+    "            return True\n",
+    "        \n",
+    "        self.res = True\n",
+    "        self.__maxDepth(root)\n",
+    "\n",
+    "        return self.res\n",
+    "        \n",
+    "    def __maxDepth(self, root: Optional[TreeNode]) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        lh = self.__maxDepth(root.left)\n",
+    "        rh = self.__maxDepth(root.right)\n",
+    "        \n",
+    "        if abs(lh - rh) > 1:\n",
+    "            self.res = False\n",
+    "        \n",
+    "        return 1 + max(lh, rh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Same Tree\n",
+    "[leetcode link](https://leetcode.com/problems/same-tree/description/), [Youtube solution](https://youtu.be/vRbbcKXCxOw)\n",
+    "\n",
+    "Check existence of coressponding nodes and their values from each tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isSameTree(self, p: Optional[TreeNode], q: Optional[TreeNode]) -> bool:\n",
+    "        if (not p) and (not q):\n",
+    "            return True\n",
+    "        \n",
+    "        if (not p and q) or (p and not q) or (p.val != q.val):\n",
+    "            return False\n",
+    "        \n",
+    "        return self.isSameTree(p.left, q.left) and self.isSameTree(p.right, q.right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Subtree of Another Tree\n",
+    "[leetcode link](https://leetcode.com/problems/subtree-of-another-tree/description/), [Youtube solution](https://youtu.be/E36O5SWp-LE)\n",
+    "\n",
+    "Use the `isSameTree()` method. Check if the `root` and `subRoot` are the same tree. If not, check if the left or right subtrees of `root` are the same. Notice two recursions, for `isSubTree()` and `isSameTree()`. Also note that `null` or `None` is always a subtree of another tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isSubtree(self, root: Optional[TreeNode], subRoot: Optional[TreeNode]) -> bool:\n",
+    "        if not subRoot:\n",
+    "            return True\n",
+    "        \n",
+    "        if not root:\n",
+    "            return False\n",
+    "        \n",
+    "        if self.isSameTree(root, subRoot):\n",
+    "            return True\n",
+    "        \n",
+    "        return self.isSubtree(root.left, subRoot) or self.isSubtree(root.right, subRoot)\n",
+    "        \n",
+    "    \n",
+    "    def isSameTree(self, root: Optional[TreeNode], subRoot: Optional[TreeNode]) -> bool:\n",
+    "        if (not root) and (not subRoot):\n",
+    "            return True\n",
+    "        \n",
+    "        if (not root and subRoot) or (root and not subRoot) or (root.val != subRoot.val):\n",
+    "            return False\n",
+    "        \n",
+    "        return self.isSameTree(root.left, subRoot.left) and self.isSameTree(root.right, subRoot.right)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lowest Common Ancestor of a Binary Search Tree\n",
+    "[leetcode link](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-search-tree/description/), [Youtube solution](https://youtu.be/gs2LMfuOR9k)\n",
+    "\n",
+    "- Traverse binary search tree. Use properties of binary search tree; if `p` and `q` are on the same side of `root`, keep traversing, else `root` is the LCA. \n",
+    "- Can be done via recursion and iterative."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def lowestCommonAncestor(self, root: TreeNode, p: TreeNode, q: TreeNode) -> TreeNode:        \n",
+    "        if p.val < root.val and q.val < root.val:\n",
+    "            return self.lowestCommonAncestor(root.left, p, q)\n",
+    "        elif p.val > root.val and q.val > root.val:\n",
+    "            return self.lowestCommonAncestor(root.right, p, q)\n",
+    "        \n",
+    "        return root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Tree Level Order Traversal\n",
+    "[leetcode link](https://leetcode.com/problems/binary-tree-level-order-traversal/description/), [Youtube solution](https://youtu.be/6ZnyEApgFYg)\n",
+    "\n",
+    "Can be implemented using `deque` and `list`. `deque` is faster since implementing FIFO in `list` involves shifting all elements."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def levelOrder(self, root: Optional[TreeNode]) -> list[list[int]]:\n",
+    "        res = []\n",
+    "        if not root:\n",
+    "            return res\n",
+    "        \n",
+    "        nodes = deque([root])\n",
+    "        while nodes:\n",
+    "            level_vals = []\n",
+    "            for _ in range(len(nodes)):\n",
+    "                node = nodes.popleft()\n",
+    "                level_vals.append(node.val)\n",
+    "                \n",
+    "                if node.left:\n",
+    "                    nodes.append(node.left)\n",
+    "                if node.right:\n",
+    "                    nodes.append(node.right)\n",
+    "            \n",
+    "            res.append(level_vals)\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binary Tree Right Side View\n",
+    "[leetcode link](https://leetcode.com/problems/binary-tree-right-side-view/description/), [Youtube solution](https://youtu.be/d4zLyf32e3I)\n",
+    "\n",
+    "Same as [Level Order Traversal](#binary-tree-level-order-traversal), but reverse the order of adding elements (right, then left). Also only print the first element of each level. Remember that the left tree needs to be traversed as well since the right tree could be shorter, in which case the left tree will be visible."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def rightSideView(self, root: Optional[TreeNode]) -> list[int]:\n",
+    "        res = []\n",
+    "        if not root:\n",
+    "            return res\n",
+    "        \n",
+    "        nodes = deque([root])\n",
+    "        while nodes:\n",
+    "            for i in range(len(nodes)):\n",
+    "                node = nodes.popleft()\n",
+    "                if i == 0:\n",
+    "                    res.append(node.val)\n",
+    "                \n",
+    "                if node.right:\n",
+    "                    nodes.append(node.right)\n",
+    "                if node.left:\n",
+    "                    nodes.append(node.left)\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count Good Nodes in Binary Tree\n",
+    "[leetcode link](https://leetcode.com/problems/count-good-nodes-in-binary-tree/description/), [Youtube solution](https://youtu.be/7cp5imvDzl4)\n",
+    "\n",
+    "Create a recursive function that calls itself with the `max_until_now` value for each node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def goodNodes(self, root: TreeNode) -> int:\n",
+    "        if not root:\n",
+    "            return 0\n",
+    "        \n",
+    "        self.res = 0\n",
+    "        self.call(root, root.val)\n",
+    "        return self.res\n",
+    "    \n",
+    "    def call(self, p: TreeNode, max_till_now: int) -> None:    \n",
+    "        if not p:\n",
+    "            return\n",
+    "        \n",
+    "        if p.val >= max_till_now:\n",
+    "            self.res += 1 \n",
+    "\n",
+    "        if p.left:\n",
+    "            self.call(p.left, max(max_till_now, p.left.val))\n",
+    "        if p.right:\n",
+    "            self.call(p.right, max(max_till_now, p.right.val))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate Binary Search Tree\n",
+    "[leetcode link](https://leetcode.com/problems/validate-binary-search-tree/description/), [Youtube solution](https://youtu.be/s6ATEkipzow)\n",
+    "\n",
+    "Every child node must be in bounds not only according to its parent, but also its grand-parents."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValidBST(self, root: Optional[TreeNode]) -> bool:\n",
+    "        if not root:\n",
+    "            return True\n",
+    "        \n",
+    "        return self.isInBounds(root.left, None, root.val) and self.isInBounds(root.right, root.val, None)\n",
+    "        \n",
+    "    def isInBounds(self, p, lower, upper):\n",
+    "        if not p:\n",
+    "            return True\n",
+    "        \n",
+    "        is_node_lower_bound_valid = p.val > lower if lower is not None else True\n",
+    "        is_node_upper_bound_valid = p.val < upper if upper is not None else True\n",
+    "        isNodeValid = is_node_lower_bound_valid and is_node_upper_bound_valid\n",
+    "\n",
+    "        return isNodeValid and self.isInBounds(p.left, lower, p.val) and self.isInBounds(p.right, p.val, upper)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Kth Smallest Element in a BST\n",
+    "[leetcode link](https://leetcode.com/problems/kth-smallest-element-in-a-bst/description/), [Youtube solution](https://youtu.be/5LUXSvjmGCw)\n",
+    "\n",
+    "Inorder traversal of a BST leads to ascending order sorted list. Use this fact to find the kth smallest element."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recursive solution\n",
+    "class Solution:\n",
+    "    def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:\n",
+    "        self.res = []\n",
+    "        self.inorder(root)\n",
+    "        return self.res[k-1]\n",
+    "    \n",
+    "    def inorder(self, p):\n",
+    "        if not p:\n",
+    "            return\n",
+    "        \n",
+    "        self.inorder(p.left)\n",
+    "        self.res.append(p.val)\n",
+    "        self.inorder(p.right)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Iterative solution\n",
+    "class Solution:\n",
+    "    def kthSmallest(self, root: Optional[TreeNode], k: int) -> int:\n",
+    "        stack = []\n",
+    "        cur = root\n",
+    "        n = 0\n",
+    "\n",
+    "        while True:\n",
+    "            while cur:\n",
+    "                stack.append(cur)\n",
+    "                cur = cur.left\n",
+    "\n",
+    "            cur = stack.pop()\n",
+    "            n += 1\n",
+    "            if n == k:\n",
+    "                return cur.val\n",
+    "            cur = cur.right\n",
+    "        \n",
+    "        return -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Construct Binary Tree from Preorder and Inorder Traversal\n",
+    "[leetcode link](https://leetcode.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/), [Youtube solution](https://youtu.be/ihj4IQGZ2zc)\n",
+    "\n",
+    "Use the first index of preorder array as the root, then split the inorder array into two parts. The left part is the left subtree, and the right part is the right subtree. Use recursion to build the left and right subtrees."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def buildTree(self, preorder: list[int], inorder: list[int]) -> Optional[TreeNode]:\n",
+    "        if not preorder or not inorder :\n",
+    "            return None\n",
+    "        \n",
+    "        pivot = inorder.index(preorder[0])\n",
+    "        \n",
+    "        # Can be passed directly as arguments inside the function call,\n",
+    "        # might use less memory for the 4 stored arrays \n",
+    "        left_inorder = inorder[:pivot]\n",
+    "        right_inorder = inorder[pivot+1:]\n",
+    "        left_preorder = preorder[1:1+pivot]\n",
+    "        right_preorder = preorder[1+pivot:]\n",
+    "\n",
+    "        root = TreeNode(preorder[0])\n",
+    "        root.left = self.buildTree(left_preorder, left_inorder)\n",
+    "        root.right = self.buildTree(right_preorder, right_inorder)\n",
+    "\n",
+    "        return root"
    ]
   }
  ],
