Finish bit manipulation

--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -4541,6 +4541,246 @@
     "solution = Solution()\n",
     "solution.minDistance(\"horse\", \"ros\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bit Manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single Number\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/single-number/description/), [Youtube solution](https://youtu.be/qMPX1AOa83k)\n",
+    "\n",
+    "XOR all the numbers in the array. The result will be the unique number since all the other numbers will cancel out (XOR a number with itself will give 0, while XOR 0 with any number will give that number)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def singleNumber(self, nums: list[int]) -> int:\n",
+    "        res = 0\n",
+    "        for num in nums:\n",
+    "            res ^= num\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of 1 Bits\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/number-of-1-bits/description/), [Youtube solution](https://youtu.be/5Km3utixwZs)\n",
+    "\n",
+    "`num & 1 == 1` checks if the least significant bit (first bit) is 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def hammingWeight(self, n: int) -> int:\n",
+    "        res = 0\n",
+    "        \n",
+    "        while n != 0:\n",
+    "            if n & 1 == 1:\n",
+    "                res += 1\n",
+    "            n = n >> 1\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Counting Bits\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/counting-bits/description/), [Youtube solution](https://youtu.be/RyBM56RIWrM)\n",
+    "\n",
+    "Use DP to store the number of 1 bits for each index before it. Write the binary representation of first few numbers to get an idea.\n",
+    "\n",
+    "If a number `i` is even, its binary representation is the same of `i // 2` but left shifted by 1 bit (since left shift is multiplication by 2). If `i` is odd, its binary representation is the same of `i - 1` (the previous even number) with an additional least significant bit set to 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def countBits(self, n: int) -> list[int]:\n",
+    "        res = [0] * (n+1)\n",
+    "\n",
+    "        for i in range(1,n+1):\n",
+    "            # even index\n",
+    "            if i & 1 == 0:\n",
+    "                res[i] = res[i // 2]\n",
+    "            else:\n",
+    "                res[i] = res[i - 1] + 1\n",
+    "    \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse Bits\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/reverse-bits/description/), [Youtube solution](https://youtu.be/UcoN6UjAI64)\n",
+    "\n",
+    "- Get the last bit.\n",
+    "- Shift the number to the right by 1 bit.\n",
+    "- Left shift the result by 1 bit (before adding the last bit).\n",
+    "- Add the last bit to the result.\n",
+    "  \n",
+    "We want to left shift the result by 1 bit before adding the last bit, since during iteration #32, we would end up adding the last bit to the result and then shift it to the right by 1 bit, which will cause overflow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def reverseBits(self, n: int) -> int:\n",
+    "        res = 0\n",
+    "\n",
+    "        for _ in range(32):\n",
+    "            last_bit = n & 1\n",
+    "            n = n >> 1\n",
+    "            res = res << 1\n",
+    "            res = res | last_bit\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Missing Number\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/missing-number/description/), [Youtube solution](https://youtu.be/WnPLSRLSANE)\n",
+    "\n",
+    "Sum of n consecutive integers: `(n * (n+1)) / 2`. Subtract all the numbers in the array. The result will be the missing number."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def missingNumber(self, nums: list[int]) -> int:\n",
+    "        res = len(nums) * (len(nums)+1) // 2    # sum of n consecutive integers\n",
+    "\n",
+    "        for num in nums:\n",
+    "            res -= num\n",
+    "        \n",
+    "        return res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sum of Two Integers\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/sum-of-two-integers/description/), [Youtube solution](https://youtu.be/gVUrDV4tZfY)\n",
+    "\n",
+    "`a ^ b` gives the sum of the two numbers, while `(a & b) << 1` gives the carry. Then add the sum and carry until carry is 0. Additional MASK is to get 32-bit integer results, since Python has arbitrary precision."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "\n",
+    "    def getSum(self, a: int, b: int) -> int:\n",
+    "        # Mask to get 32-bit integer results\n",
+    "        MASK = 0xFFFFFFFF\n",
+    "        MAX_INT = 0x7FFFFFFF\n",
+    "\n",
+    "        while b != 0:\n",
+    "            temp = (a & b) << 1 & MASK  # Compute carry\n",
+    "            a = (a ^ b) & MASK  # Compute sum without carry\n",
+    "            b = temp  # Update b to the carry value\n",
+    "\n",
+    "        # If a is negative, get its two's complement positive equivalent and invert it\n",
+    "        return a if a <= MAX_INT else ~(a ^ MASK)\n",
+    "\n",
+    "solution = Solution()\n",
+    "solution.getSum(-1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reverse Integer\n",
+    "\n",
+    "[leetcode link](https://leetcode.com/problems/reverse-integer/description/), [Youtube solution](https://youtu.be/HAgLH58IgJQ)\n",
+    "\n",
+    "Standard procedure to reverse integer, just that we need to check for overflow at each iteration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def __init__(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    def reverse(self, x: int) -> int:\n",
+    "        INT_MIN = - 2 ** 31     # -2147483648\n",
+    "        INT_MAX = 2 ** 31 -1    #  2147483647\n",
+    "\n",
+    "        res = 0\n",
+    "        while x != 0:\n",
+    "            sign = x // abs(x)\n",
+    "            digit = sign * (abs(x) % 10)\n",
+    "            x = sign * (abs(x) // 10)\n",
+    "            \n",
+    "            positive_overflow = (res > INT_MAX // 10) or (res == INT_MAX // 10 and digit >= INT_MAX % 10)\n",
+    "            negative_overflow = (res < INT_MIN // 10) or (res == INT_MIN // 10 and digit <= INT_MIN % 10)\n",
+    "\n",
+    "            if positive_overflow or negative_overflow:\n",
+    "                return 0\n",
+    "            \n",
+    "            res = 10 * res + digit\n",
+    "            \n",
+    "        return res\n",
+    "\n",
+    "solution = Solution()\n",
+    "solution.reverse(-123)"
+   ]
   }
  ],
  "metadata": {
